--- a/instagram logo/instagram.html
+++ b/instagram logo/instagram.html
@@ -10,7 +10,7 @@
     <div class="logo">
       <div class="square">
         <div class="circle-big">
-          <div class="cicle-small"></div>
+          <div class="circle-small"></div>
         </div>
       </div>
     </div>
