--- a/ice_cream/ice_cream.html
+++ b/ice_cream/ice_cream.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="ice_cream.css" />
   </head>
   <body>
-    <div class="ice-cream"></div>
+    <div class="ice-cream">
+      <div class="stick"></div>
+    </div>
   </body>
 </html>
