Create and position ice cream dimple details

--- a/ice_cream/ice_cream.html
+++ b/ice_cream/ice_cream.html
@@ -9,6 +9,8 @@
   <body>
     <div class="ice-cream">
       <div class="stick"></div>
+      <div class="side"></div>
+      <div class="side side2"></div>
     </div>
   </body>
 </html>
