Create and position initial melting spots

--- a/ice_cream/ice_cream.html
+++ b/ice_cream/ice_cream.html
@@ -11,6 +11,8 @@
       <div class="stick"></div>
       <div class="side"></div>
       <div class="side side2"></div>
+      <div class="melting"></div>
+      <div class="melting melting2"></div>
     </div>
   </body>
 </html>
