--- a/ice_cream/ice_cream.html
+++ b/ice_cream/ice_cream.html
@@ -13,6 +13,9 @@
       <div class="side side2"></div>
       <div class="melting"></div>
       <div class="melting melting2"></div>
+      <div class="bite"></div>
+      <div class="bite bite2"></div>
+      <div class="bite bite3"></div>
     </div>
   </body>
 </html>
