Create base container for character

--- a/pikachu/pikachu.html
+++ b/pikachu/pikachu.html
@@ -6,5 +6,10 @@
     <title>Pikachu Drawing CSS Art</title>
     <link rel="stylesheet" href="pikachu.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="eye -r"></div>
+      <div class="eye -l"></div>
+    </div>
+  </body>
 </html>
