--- a/pikachu/pikachu.html
+++ b/pikachu/pikachu.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="eye -r"></div>
-      <div class="eye -l"></div>
+      <div class="eye -r">
+        <div class="eyeball"></div>
+      </div>
+      <div class="eye -l">
+        <div class="eyeball"></div>
+      </div>
     </div>
   </body>
 </html>
