--- a/pikachu/pikachu.html
+++ b/pikachu/pikachu.html
@@ -14,6 +14,7 @@
       <div class="eye -l">
         <div class="eyeball"></div>
       </div>
+      <div class="nose"></div>
     </div>
   </body>
 </html>
