--- a/pikachu/pikachu.html
+++ b/pikachu/pikachu.html
@@ -15,6 +15,8 @@
         <div class="eyeball"></div>
       </div>
       <div class="nose"></div>
+      <div class="cheek -r"></div>
+      <div class="cheek -l"></div>
     </div>
   </body>
 </html>
