Create and position mouth

--- a/pikachu/pikachu.html
+++ b/pikachu/pikachu.html
@@ -17,6 +17,9 @@
       <div class="nose"></div>
       <div class="cheek -r"></div>
       <div class="cheek -l"></div>
+      <div class="mouth">
+        <div class="tongue"></div>
+      </div>
     </div>
   </body>
 </html>
