--- a/koala/koala.html
+++ b/koala/koala.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <div class="container">
-      <div class="head"></div>
+      <div class="head">
+        <div class="head-copy"></div>
+        <div class="ear ear-left">
+          <div class="inner-ear"></div>
+        </div>
+        <div class="ear ear-right">
+          <div class="inner-ear"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
