--- a/koala/koala.html
+++ b/koala/koala.html
@@ -16,6 +16,12 @@
         <div class="ear ear-right">
           <div class="inner-ear"></div>
         </div>
+        <div class="eye eye-left">
+          <div class="pupil"></div>
+        </div>
+        <div class="eye eye-right">
+          <div class="pupil"></div>
+        </div>
       </div>
     </div>
   </body>
