Create and position koala nose

--- a/koala/koala.html
+++ b/koala/koala.html
@@ -22,6 +22,7 @@
         <div class="eye eye-right">
           <div class="pupil"></div>
         </div>
+        <div class="nose"></div>
       </div>
     </div>
   </body>
