Create and position koala hair and change container background to complete drawing

--- a/koala/koala.html
+++ b/koala/koala.html
@@ -23,6 +23,8 @@
           <div class="pupil"></div>
         </div>
         <div class="nose"></div>
+        <div class="hair-left"></div>
+        <div class="hair-right"></div>
       </div>
     </div>
   </body>
