Create base for Owl head

--- a/owl/owl.html
+++ b/owl/owl.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="owl.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="head"></div>
+    </div>
   </body>
 </html>
