--- a/owl/owl.html
+++ b/owl/owl.html
@@ -9,6 +9,12 @@
   <body>
     <div class="container">
       <div class="head"></div>
+      <div class="eye-container left">
+        <div class="eye left-eye"></div>
+      </div>
+      <div class="eye-container right">
+        <div class="eye right-eye"></div>
+      </div>
     </div>
   </body>
 </html>
