Create wings and body of owl

--- a/owl/owl.html
+++ b/owl/owl.html
@@ -16,6 +16,7 @@
         <div class="eye right-eye"></div>
       </div>
       <div class="beak"></div>
+      <div class="wings"></div>
     </div>
   </body>
 </html>
