Create and position owls feet

--- a/owl/owl.html
+++ b/owl/owl.html
@@ -17,6 +17,8 @@
       </div>
       <div class="beak"></div>
       <div class="wings"></div>
+      <div class="foot left-foot"></div>
+      <div class="foot right-foot"></div>
     </div>
   </body>
 </html>
