--- a/owl/owl.html
+++ b/owl/owl.html
@@ -15,6 +15,7 @@
       <div class="eye-container right">
         <div class="eye right-eye"></div>
       </div>
+      <div class="forehead"></div>
       <div class="beak"></div>
       <div class="wings"></div>
       <div class="foot left-foot"></div>
