--- a/bear/bear.html
+++ b/bear/bear.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="head"></div>
+      <div class="head">
+        <div class="ear-left"></div>
+        <div class="ear-right"></div>
+      </div>
     </div>
   </body>
 </html>
