--- a/bear/bear.html
+++ b/bear/bear.html
@@ -9,6 +9,7 @@
   <body>
     <div class="container">
       <div class="head">
+        <div class="head-copy"></div>
         <div class="ear-left"></div>
         <div class="ear-right"></div>
       </div>
