Add and position eyes

--- a/bear/bear.html
+++ b/bear/bear.html
@@ -12,6 +12,8 @@
         <div class="head-copy"></div>
         <div class="ear-left"></div>
         <div class="ear-right"></div>
+        <div class="left-eye"></div>
+        <div class="right-eye"></div>
       </div>
     </div>
   </body>
