--- a/bear/bear.html
+++ b/bear/bear.html
@@ -14,6 +14,11 @@
         <div class="ear-right"></div>
         <div class="left-eye"></div>
         <div class="right-eye"></div>
+        <div class="muzzle">
+          <div class="nose"></div>
+          <div class="bottom-nose"></div>
+          <div class="mouth"></div>
+        </div>
       </div>
     </div>
   </body>
