--- a/snowman/snowman.html
+++ b/snowman/snowman.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div class="snowman">
-      <div class="head"></div>
+      <div class="head">
+        <div class="eye-left"></div>
+        <div class="eye-right"></div>
+      </div>
     </div>
   </body>
 </html>
