Create and position snowman nose

--- a/snowman/snowman.html
+++ b/snowman/snowman.html
@@ -11,6 +11,7 @@
       <div class="head">
         <div class="eye-left"></div>
         <div class="eye-right"></div>
+        <div class="nose"></div>
       </div>
     </div>
   </body>
