Create and position hat

--- a/snowman/snowman.html
+++ b/snowman/snowman.html
@@ -12,6 +12,9 @@
         <div class="eye-left"></div>
         <div class="eye-right"></div>
         <div class="nose"></div>
+        <div class="hat">
+          <div class="hat-top"></div>
+        </div>
       </div>
     </div>
   </body>
