--- a/snowman/snowman.html
+++ b/snowman/snowman.html
@@ -16,6 +16,13 @@
           <div class="hat-top"></div>
         </div>
       </div>
+      <div class="snowman-body">
+        <div class="buttons">
+          <div class="b1"></div>
+          <div class="b2"></div>
+          <div class="b3"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
