--- a/snowman/snowman.html
+++ b/snowman/snowman.html
@@ -22,6 +22,12 @@
           <div class="b2"></div>
           <div class="b3"></div>
         </div>
+        <div class="hand-left">
+          <div></div>
+        </div>
+        <div class="hand-right">
+          <div></div>
+        </div>
       </div>
     </div>
   </body>
