Add snowman scarf and change background color to complete CSS drawing

--- a/snowman/snowman.html
+++ b/snowman/snowman.html
@@ -29,6 +29,9 @@
           <div></div>
         </div>
       </div>
+      <div class="scarf"></div>
+      <div class="scarf2"></div>
+      <div class="scarf3"></div>
     </div>
   </body>
 </html>
