--- a/bomberman/bomberman.html
+++ b/bomberman/bomberman.html
@@ -11,6 +11,7 @@
       <div class="head-top"></div>
       <div class="head"></div>
       <div class="face"></div>
+      <div class="body"></div>
     </div>
   </body>
 </html>
