Create and position Bomberman arms hands and fingers

--- a/bomberman/bomberman.html
+++ b/bomberman/bomberman.html
@@ -12,6 +12,10 @@
       <div class="head"></div>
       <div class="face"></div>
       <div class="body"></div>
+      <div class="right-arm"></div>
+      <div class="right-hand"></div>
+      <div class="left-arm"></div>
+      <div class="left-hand"></div>
     </div>
   </body>
 </html>
