--- a/bomberman/bomberman.html
+++ b/bomberman/bomberman.html
@@ -16,6 +16,10 @@
       <div class="right-hand"></div>
       <div class="left-arm"></div>
       <div class="left-hand"></div>
+      <div class="left-leg"></div>
+      <div class="right-leg"></div>
+      <div class="left-foot"></div>
+      <div class="right-foot"></div>
     </div>
   </body>
 </html>
