--- a/vampire/vampire.html
+++ b/vampire/vampire.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vampire Drawing CSS Art</title>
-    <link rel="stylesheet" href="vampire.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="vampire.css" />
+  </head>
+  <body>
+    <div class="vampire">
+      <div class="head">
+        <div class="hair"></div>
+      </div>
+    </div>
+  </body>
 </html>
