Create and position Vampire eyes and brows

--- a/vampire/vampire.html
+++ b/vampire/vampire.html
@@ -10,6 +10,12 @@
     <div class="vampire">
       <div class="head">
         <div class="hair"></div>
+        <div class="left-eye">
+          <div class="brow"></div>
+        </div>
+        <div class="right-eye">
+          <div class="brow"></div>
+        </div>
       </div>
     </div>
   </body>
