Add and position vampire nose

--- a/vampire/vampire.html
+++ b/vampire/vampire.html
@@ -16,6 +16,7 @@
         <div class="right-eye">
           <div class="brow"></div>
         </div>
+        <div class="nose"></div>
       </div>
     </div>
   </body>
