Create and position Vampire mouth

--- a/vampire/vampire.html
+++ b/vampire/vampire.html
@@ -17,6 +17,7 @@
           <div class="brow"></div>
         </div>
         <div class="nose"></div>
+        <div class="mouth"></div>
       </div>
     </div>
   </body>
