Create and position Vampire teeth

--- a/vampire/vampire.html
+++ b/vampire/vampire.html
@@ -18,6 +18,8 @@
         </div>
         <div class="nose"></div>
         <div class="mouth"></div>
+        <div class="left-tooth"></div>
+        <div class="right-tooth"></div>
       </div>
     </div>
   </body>
