Create and position body, fix height bug on various screens

--- a/vampire/vampire.html
+++ b/vampire/vampire.html
@@ -21,6 +21,15 @@
         <div class="left-tooth"></div>
         <div class="right-tooth"></div>
       </div>
+
+      <div class="collar"></div>
+      <div class="cape"></div>
+
+      <div class="bow">
+        <div class="button"></div>
+        <div class="button"></div>
+        <div class="button"></div>
+      </div>
     </div>
   </body>
 </html>
