Create position and style preview cards

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CSS Art Gallery</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="favicon_sailboat_ocean_16.png" />
   </head>
@@ -16,6 +16,210 @@
       <h1>CSS Art Gallery</h1>
 
       <!-- Clickable Preview Cards that show each CSS Art project and link to their seperate page -->
+      <section class="cards">
+        <article class="card">
+          <h2 class="card-title"><a href="./diamond/diamond.html">Diamond</a></h2>
+          <div class="card-content">
+            <iframe title="diamond" src="./diamond/diamond.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./envelope_with_heart/envelope.html">Envelope</a></h2>
+          <div class="card-content">
+            <iframe title="envelope with heart" src="./envelope_with_heart/envelope.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./pepsi logo/pepsi.html">Pepsi Logo</a></h2>
+          <div class="card-content">
+            <iframe title="pepsi logo" src="./pepsi logo/pepsi.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./camera/camera.html">Camera</a></h2>
+          <div class="card-content">
+            <iframe title="camera" src="./camera/camera.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./coffee_mug/coffee.html">Coffee Mug</a></h2>
+          <div class="card-content">
+            <iframe title="coffee mug" src="./coffee_mug/coffee.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./batman/batman.html">Batman Logo</a></h2>
+          <div class="card-content">
+            <iframe title="Batman Logo" src="./batman/batman.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./captain_america/captain.html">Captain America Shield</a></h2>
+          <div class="card-content">
+            <iframe title="Captain America Shield" src="./captain_america/captain.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./gear/gear.html">Gear</a></h2>
+          <div class="card-content">
+            <iframe title="Gear" src="./gear/gear.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./google_logo/google.html">Google Logo</a></h2>
+          <div class="card-content">
+            <iframe title="Google Logo" src="./google_logo/google.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./instagram logo/instagram.html">Instagram Logo</a></h2>
+          <div class="card-content">
+            <iframe title="Instagram Logo" src="./instagram logo/instagram.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./panda_drawing/panda.html">Panda Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Panda Drawing" src="./panda_drawing/panda.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./watermelon/watermelon.html">Watermelon Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Watermelon" src="./watermelon/watermelon.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./adidas/adidas.html">Adidas Logo</a></h2>
+          <div class="card-content">
+            <iframe title="Adidas" src="./adidas/adidas.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./brackets/brackets.html">Brackets Logo</a></h2>
+          <div class="card-content">
+            <iframe title="Brackets" src="./brackets/brackets.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./donut/donut.html">Donut Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Donut" src="./donut/donut.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./figma_logo/figma.html">Figma Logo</a></h2>
+          <div class="card-content">
+            <iframe title="Figma Logo" src="./figma_logo/figma.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./react_logo/react_logo.html">React Logo</a></h2>
+          <div class="card-content">
+            <iframe title="React Logo" src="./react_logo/react_logo.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./lg_logo/lg_logo.html">LG Logo</a></h2>
+          <div class="card-content">
+            <iframe title="LG" src="./lg_logo/lg_logo.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./ice_cream/ice_cream.html">Ice Cream Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Ice Cream" src="./ice_cream/ice_cream.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./pikachu/pikachu.html">Pikachu Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Pikachu" src="./pikachu/pikachu.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./koala/koala.html">Koala Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Koala" src="./koala/koala.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./owl/owl.html">Owl Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Owl" src="./owl/owl.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./bear/bear.html">Bear Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Bear" src="./bear/bear.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./snowman/snowman.html">Snowman Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Snowman" src="./snowman/snowman.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="./bomberman/bomberman.html">BomberMan Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Bomberman" src="./bomberman/bomberman.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="vampire/vampire.html">Vampire Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="Vampire" src="./vampire/vampire.html" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="">Beaver Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="" src="" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="">Clock, Books, and Cactus Shelf</a></h2>
+          <div class="card-content">
+            <iframe title="" src="" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+
+        <article class="card">
+          <h2 class="card-title"><a href="">Homer Drawing</a></h2>
+          <div class="card-content">
+            <iframe title="" src="" frameborder="0" scrolling="no"></iframe>
+          </div>
+        </article>
+      </section>
     </main>
     <footer></footer>
   </body>
