--- a/beaver/beaver.html
+++ b/beaver/beaver.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="beaver.css" />
     <title>Beaver CSS Art Drawing</title>
   </head>
   <body>
