--- a/beaver/beaver.html
+++ b/beaver/beaver.html
@@ -14,6 +14,12 @@
         <div class="arm-left"></div>
         <div class="arm-right"></div>
       </div>
+      <div class="eye-left">
+        <div class="lashes"></div>
+      </div>
+      <div class="eye-right">
+        <div class="lashes"></div>
+      </div>
     </div>
   </body>
 </html>
