Create and position beavers nose

--- a/beaver/beaver.html
+++ b/beaver/beaver.html
@@ -21,6 +21,7 @@
         <div class="lashes"></div>
       </div>
       <div class="muzzle"></div>
+      <div class="nose"></div>
     </div>
   </body>
 </html>
