--- a/beaver/beaver.html
+++ b/beaver/beaver.html
@@ -20,6 +20,7 @@
       <div class="eye-right">
         <div class="lashes"></div>
       </div>
+      <div class="teeth"></div>
       <div class="muzzle"></div>
       <div class="nose"></div>
     </div>
