Create and position beavers whiskers

--- a/beaver/beaver.html
+++ b/beaver/beaver.html
@@ -22,6 +22,8 @@
       </div>
       <div class="teeth"></div>
       <div class="muzzle"></div>
+      <div class="whiskers-left"></div>
+      <div class="whiskers-right"></div>
       <div class="nose"></div>
     </div>
   </body>
