Create and position beavers ears

--- a/beaver/beaver.html
+++ b/beaver/beaver.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div class="frame">
+      <div class="ear-left"></div>
+      <div class="ear-right"></div>
       <div class="body">
         <div class="bow"></div>
         <div class="heart"></div>
