Add Beaver Drawing to display card on home page

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
         </article>
 
         <article class="card">
-          <h2 class="card-title"><a href="">Beaver Drawing</a></h2>
+          <h2 class="card-title"><a href="./beaver/beaver.html">Beaver Drawing</a></h2>
           <div class="card-content">
-            <iframe title="" src="" frameborder="0" scrolling="no"></iframe>
+            <iframe title="Beaver" src="./beaver/beaver.html" frameborder="0" scrolling="no"></iframe>
           </div>
         </article>
 
