--- a/clock_books_cactus_shelf/bookshelf.html
+++ b/clock_books_cactus_shelf/bookshelf.html
@@ -6,5 +6,18 @@
     <title>Bookshelf with clock and plant</title>
     <link rel="stylesheet" href="bookshelf.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="shelf">
+      <div class="clock">
+        <div class="knot"></div>
+        <div class="hand hour-hand"></div>
+        <div class="hand minute-hand"></div>
+        <div class="hand second-hand"></div>
+        <div class="clock-ear-left"></div>
+        <div class="clock-ear-right"></div>
+        <div class="clock-foot-left"></div>
+        <div class="clock-foot-right"></div>
+      </div>
+    </div>
+  </body>
 </html>
