Create and position the three books on the shelf

--- a/clock_books_cactus_shelf/bookshelf.html
+++ b/clock_books_cactus_shelf/bookshelf.html
@@ -18,6 +18,9 @@
         <div class="clock-foot-left"></div>
         <div class="clock-foot-right"></div>
       </div>
+      <div class="book1"></div>
+      <div class="book2"></div>
+      <div class="book3"></div>
     </div>
   </body>
 </html>
