--- a/clock_books_cactus_shelf/bookshelf.html
+++ b/clock_books_cactus_shelf/bookshelf.html
@@ -21,6 +21,14 @@
       <div class="book1"></div>
       <div class="book2"></div>
       <div class="book3"></div>
+      <div class="cactus">
+        <div class="pot">
+          <div class="pot-top"></div>
+          <div class="pot-bottom"></div>
+        </div>
+        <div class="plant-left"></div>
+        <div class="plant-right"></div>
+      </div>
     </div>
   </body>
 </html>
