Update Card to include new clock, books, and cactus shelf CSS art

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
         </article>
 
         <article class="card">
-          <h2 class="card-title"><a href="">Clock, Books, and Cactus Shelf</a></h2>
+          <h2 class="card-title"><a href="./clock_books_cactus_shelf/bookshelf.html">Clock, Books, and Cactus Shelf</a></h2>
           <div class="card-content">
-            <iframe title="" src="" frameborder="0" scrolling="no"></iframe>
+            <iframe title="Bookshelf" src="./clock_books_cactus_shelf/bookshelf.html" frameborder="0" scrolling="no"></iframe>
           </div>
         </article>
 
