--- a/homer/homer.html
+++ b/homer/homer.html
@@ -12,10 +12,10 @@
       <div class="hair1"></div>
       <div class="hair2"></div>
 
-      <div class="r_eye">
+      <div class="r-eye">
         <div class="pupil-right"></div>
       </div>
-      <div class="l_eye">
+      <div class="l-eye">
         <div class="pupil-left"></div>
       </div>
     </div>
