--- a/homer/homer.html
+++ b/homer/homer.html
@@ -21,6 +21,8 @@
         <div class="pupil-left"></div>
       </div>
 
+      <div class="neck"></div>
+
       <div class="mouth">
         <div class="mouth-part1"></div>
         <div class="mouth-part2"></div>
@@ -31,6 +33,9 @@
 
       <div class="f-side2"></div>
       <div class="nose"></div>
+
+      <div class="collar-left"></div>
+      <div class="collar-right"></div>
     </div>
   </body>
 </html>
