Update display card to include Homer CSS Drawing

--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
         </article>
 
         <article class="card">
-          <h2 class="card-title"><a href="">Homer Drawing</a></h2>
+          <h2 class="card-title"><a href="./homer/homer.html">Homer Drawing</a></h2>
           <div class="card-content">
-            <iframe title="" src="" frameborder="0" scrolling="no"></iframe>
+            <iframe title="Homer Simpson" src="./homer/homer.html" frameborder="0" scrolling="no"></iframe>
           </div>
         </article>
       </section>
